deployment/rasa-action-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rasa-action-server
  namespace: home
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: rasa-action-server
  type: ClusterIP
