deployment/rasa-action-server/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rasa-action-server-https
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rasa-action-server.michaelgoldstein.co`)
      services:
        - name: rasa-action-server
          port: 80
  tls:
    secretName: letsencrypt-prod-cert
